syntax = "proto3";

package savingsplan;

option go_package = "github.com/Sannrox/tradepipe/grpc/pb/savingsplan";

message RequestSavingsplan {
    string process_id = 1;
} 

message ResponseSavingsplan {
    string process_id = 1;
    string error = 2;
    bytes savingsplans = 3;
}